--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@
               <button class="btn" type="button">Backend</button>
               <button class="btn" type="button">Junior</button>
               <button class="btn" type="button">Ruby</button>
-              <button class="btn" type="button"> <button class="btn" type="button">Ruby</button>
-              </button>
+             <button class="btn" type="button">Ruby</button>
             </div>
           </li>
           <li class="list-item">
